objects/GDT_ManageLicense_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>GDT_Analysis_AffiliateGroup__c</fullName>
        <label>Affiliate Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pernod Ricard</fullName>
                </value>
                <value>
                    <fullName>PR Asia</fullName>
                </value>
                <value>
                    <fullName>PR Chatter</fullName>
                </value>
                <value>
                    <fullName>PR Europe</fullName>
                </value>
                <value>
                    <fullName>PR Holding</fullName>
                </value>
                <value>
                    <fullName>PR Latin America</fullName>
                </value>
                <value>
                    <fullName>PR North America</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT</fullName>
                </value>
                <value>
                    <fullName>CORBY</fullName>
                </value>
                <value>
                    <fullName>RICARD</fullName>
                </value>
                <value>
                    <fullName>Headquarters</fullName>
                </value>
                <value>
                    <fullName>MMPJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDT_Analysis_AppName__c</fullName>
        <label>Application Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BMC Remedyforce</fullName>
                </value>
                <value>
                    <fullName>Cloud Coach Enterprise</fullName>
                </value>
                <value>
                    <fullName>Greatvines</fullName>
                </value>
                <value>
                    <fullName>Orchestra CMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDT_Analysis_DateLastUpdate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date of last update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GDT_Analysis_LastUpdate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Last Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GDT_Analysis_LicenseType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Type</label>
        <referenceTo>GDT_ManageLicense_License__c</referenceTo>
        <relationshipLabel>GDT ManageLicense Analysis</relationshipLabel>
        <relationshipName>GDT_ManageLicense_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GDT_Analysis_RemainingLicenses__c</fullName>
        <formula>GDT_Analysis_TotalLicenses__c  -  GDT_Analysis_UsedLicenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GDT_Analysis_TotalLicenses__c</fullName>
        <label>Total Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GDT_Analysis_UsedLicenses__c</fullName>
        <label>Used Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GDT ManageLicense Analysis</label>
    <listViews>
        <fullName>All</fullName>
        <columns>GDT_Analysis_AffiliateGroup__c</columns>
        <columns>GDT_Analysis_LicenseType__c</columns>
        <columns>GDT_Analysis_AppName__c</columns>
        <columns>GDT_Analysis_TotalLicenses__c</columns>
        <columns>GDT_Analysis_UsedLicenses__c</columns>
        <columns>GDT_Analysis_RemainingLicenses__c</columns>
        <columns>GDT_Analysis_LastUpdate__c</columns>
        <columns>GDT_Analysis_DateLastUpdate__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/21/2017 12:00 AM</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>GDT Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GDT ManageLicense Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>